<resources>
    <string name="app_name">Project!</string>
    <string name="btnWelcome">WELCOME</string>
    <string name="msg1">Have you ever used</string>
    <string name="msg2">an educational app </string>
    <string name="msg3">before ?</string>
    <string name="msg4">Worry not,we’ve got</string>
    <string name="msg5">yu covered.</string>
    <string name="msg6">Get ready to play </string>
    <string name="msg7">maths with </string>
    <string name="msg8">MathMentor. Be</string>
    <string name="msg9">maths </string>
    <string name="msg10">mentor yourself ! Let </string>
    <string name="msg11">the play begin</string>
    <string name="start">GET START</string>
    <string name="sign">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Full Name</string>
    <string name="mail">E - Mail</string>
    <string name="phone">Phone No</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="app">Appearance</string>
    <string name="com">Communication</string>
    <string name="out">Sign Out</string>
    <string name="faq">FAQ</string>
    <string name="book">Add the Bookmarks</string>
    <string name="pro">Profile</string>
    <string name="notification">Notification</string>
    <string name="submit">SUBMIT</string>
    <string name="EDIT">EDIT</string>
    <string name="alert1">Successfully Updated!</string>
    <string name="done">DONE</string>
    <string name="image">Add Image</string>
    <string name="q">Question</string>
    <string name="a">Answer</string>
    <string name="sh">Search here....</string>
    <string name="pass">Forget Password</string>


</resources>