<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:textAlignment="center"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:layout_marginTop="108dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/out"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="80dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />


    <Button
        android:id="@+id/button5"
        style="@style/Widget.Material3.Button"
        android:layout_width="182dp"
        android:layout_height="56dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/green"
        android:text="@string/out"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="272dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="372dp"
        android:text="@string/mail"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="472dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="280dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="322dp"
        android:background="@drawable/textbox2"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="280dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="522dp"
        android:background="@drawable/textbox2"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="280dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="422dp"
        android:background="@drawable/textbox2"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:rotationY="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_input_24" />


</androidx.constraintlayout.widget.ConstraintLayout>