<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/q"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button7"
        style="@style/Widget.Material3.Button"
        android:layout_width="182dp"
        android:layout_height="56dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="@color/green"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="80dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="296dp"
        android:backgroundTint="@color/black"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_add_a_photo_24" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="73dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="308dp"
        android:text=".png"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="344dp"
        android:text="@string/image"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_home_24" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/baseline_edit_notifications_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_person_outline_24" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_description_24" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="302dp"
        android:layout_height="136dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/textbox3"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>